[package]
name = "gamels"
version = "1.0.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "List current directory, converting file names to steam game titles"
readme = "README.md"
homepage = "https://github.com/ewpratten/gamels"
repository = "https://github.com/ewpratten/gamels"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1.22.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "^1.0.126", features = ["derive"] }
colored = "^2.0.0"
reqwest = {version="^0.11.13", default-features=false, features=["json", "rustls-tls"]}
serde_json = "^1.0.64"
thiserror = "^1.0.37"
users = "^0.11.0"
humansize = "^2.1.2"
chrono = "^0.4.23"
file-mode = "^0.1.2"
directories = "^5.0.1"
[package.metadata.rpm]
package = "gamels"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
gamels = { path = "/usr/bin/gamels" }
